# harness

./: .gitignore  README.md  pyproject.toml  ui.py
agents/: chat.py  content_entrepreneur.py  entrepreneur.py  finance.py  finance_research.py  research.py  task.py
harness/: compact.py  credentials.py  driver.py  forest.py  killswitch.py  log.py  model.py  resume.py  session.py  skills.py  telegram_bridge.py  tools.py  types.py
policies/: chat.py  explore_delegation.py  explore_research.py  research.py  task.py  task_deep.py
projects/financial-research/: README.md  run.py
projects/financial-research/memos/: 2026-05-24-q1-2026-hyperscaler-capex.md
projects/financial-research/questions/: q1-2026-hyperscaler-capex.md
prompts/: README.md  content-entrepreneur-kickoff-v1.md  entrepreneur-kickoff-v1.md  explain-code.md
skills/: company_research.md  dcf_valuation.md  earnings_analysis.md  peer_comps.md  sec_filings.md  sector_overview.md
