[project]
name = "harness"
version = "0.1.0"
description = "Small autonomous-agent harness with an interactive shell."
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "python-telegram-bot>=20",
]

[tool.pyright]
include = ["harness", "agents", "ui.py"]
typeCheckingMode = "basic"
